<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorWhite">
    <ImageView
            android:layout_width="322dp"
            android:layout_height="100dp" app:srcCompat="@drawable/img_findphone_title_banner"
            android:id="@+id/iv_findphone_title_banner" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="13dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="19dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="19dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="43dp" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_findphone_title_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ll_findphone_title_layout">
        <TextView
                android:text="@string/str_click_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/tv_findphone_title" android:layout_weight="1"
                android:gravity="center" android:background="@color/color09DCE6" android:textColor="@color/colorWhite"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="130dp" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_findphone_title_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ll_findphone_tab_layout">
        <Button
                android:layout_width="180dp"
                android:layout_height="match_parent" android:id="@+id/bt_findphone_findphone" android:layout_weight="1"
                android:background="@drawable/bt_findphone_tab_findphone"/>
        <Button
                android:layout_width="180dp"
                android:layout_height="match_parent" android:id="@+id/bt_findphone_nouse" android:layout_weight="1"
                android:visibility="invisible"/>
    </LinearLayout>
    <TextView
            android:text="@string/str_click_once"
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:id="@+id/tv_findphone_click_once"
            app:layout_constraintTop_toBottomOf="@+id/ll_findphone_tab_layout" android:layout_marginTop="34dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_findphone_click_twice" android:layout_marginEnd="19dp"
            android:textColor="@color/colorBlack"/>
    <TextView
            android:text="@string/str_click_twice"
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:id="@+id/tv_findphone_click_twice" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_findphone_tab_layout"
            app:layout_constraintEnd_toStartOf="@+id/tv_findphone_click_hold" android:layout_marginEnd="19dp"
            android:textColor="@color/colorBlack"/>
    <TextView
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:id="@+id/tv_findphone_click_hold"
            android:text="@string/str_click_hold" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_findphone_tab_layout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="19dp" android:textColor="@color/colorBlack"/>
    <ImageView
            android:layout_width="115dp"
            android:layout_height="50dp" app:srcCompat="@drawable/img_findphone_findphone"
            android:id="@+id/iv_findphone_findphone" android:layout_marginTop="73dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_findphone_tab_layout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="19dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/rg_light_light"
            android:orientation="horizontal" app:layout_constraintStart_toEndOf="@+id/iv_findphone_findphone"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="19dp" android:layout_marginEnd="19dp" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_findphone_click_once">

        <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/rb_click_once"
                android:button="@null" android:background="@drawable/selector_radiobutton_findphone_default"/>
        <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/rb_click_twice"
                app:layout_constraintTop_toBottomOf="@+id/tv_findphone_click_twice"
                app:layout_constraintEnd_toStartOf="@+id/rb_click_hold" android:layout_marginLeft="19dp"
                android:button="@null" android:background="@drawable/selector_radiobutton_findphone_default"/>
        <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/rb_click_hold"
                android:layout_marginLeft="19dp" android:background="@drawable/selector_radiobutton_findphone_default"
                android:button="@null"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>