<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorWhite">
    <ImageView
            android:layout_width="322dp"
            android:layout_height="100dp" app:srcCompat="@drawable/img_title_banner"
            android:id="@+id/iv_message_title_banner" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="13dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="19dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="19dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="43dp" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_message_title_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ll_message_title_layout">
        <TextView
                android:text="@string/str_notification_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/tv_message_title" android:layout_weight="1"
                android:gravity="center" android:background="@color/colorEDE471" android:textColor="@color/colorWhite"
                android:textSize="18sp" android:fontFamily="@font/tcceb"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="130dp" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_message_title_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ll_message_tab_layout">
        <Button
                android:layout_width="180dp"
                android:layout_height="match_parent" android:id="@+id/bt_message_message" android:layout_weight="1"
                android:background="@drawable/bt_message_tab_message"/>
        <Button
                android:layout_width="180dp"
                android:layout_height="match_parent" android:id="@+id/bt_message_nouse" android:layout_weight="1"
                android:visibility="invisible"/>
    </LinearLayout>
    <TextView
            android:text="@string/str_vib_title"
            android:layout_width="81dp"
            android:layout_height="26dp"
            android:id="@+id/tv_message_vib_title"
            android:gravity="center_horizontal|center_vertical" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_message_tab_layout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="72dp" android:textColor="@color/colorBlack"
            android:fontFamily="@font/tcceb"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_message_vib_title"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ll_message_vib_layout"
            app:layout_constraintStart_toStartOf="parent">
        <ImageView
                android:layout_width="116dp"
                android:layout_height="50dp" app:srcCompat="@drawable/img_message_vibrate"
                android:id="@+id/iv_message_vibration" android:layout_marginStart="19dp"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/rg_message_vibration"
                android:layout_marginLeft="19dp" android:layout_marginRight="19dp"
                android:orientation="horizontal">
            <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="50dp" android:id="@+id/rb_vib_once"
                    android:background="@drawable/selector_radiobutton_message_vib_once"
                    android:button="@null"/>
            <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="50dp" android:id="@+id/rb_vib_twice"
                    android:layout_marginLeft="9dp" android:button="@null"
                    android:background="@drawable/selector_radiobutton_message_vib_twice"/>
            <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="50dp" android:id="@+id/rb_vib_infinite"
                    android:layout_marginLeft="9dp" android:background="@drawable/selector_radiobutton_message_vib_no"
                    android:button="@null"/>
            <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="50dp" android:id="@+id/rb_vib_no"
                    android:layout_marginLeft="9dp" android:button="@null"
                    android:background="@drawable/selector_radiobutton_message_vib_infinite"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
            android:text="@string/str_click_once"
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:id="@+id/tv_message_click_once"
            app:layout_constraintTop_toBottomOf="@+id/ll_message_vib_layout" android:layout_marginTop="34dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_message_click_twice" android:layout_marginEnd="19dp"
            android:textColor="@color/colorBlack" android:fontFamily="@font/tcceb"/>
    <TextView
            android:text="@string/str_click_twice"
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:id="@+id/tv_message_click_twice" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_message_vib_layout"
            app:layout_constraintEnd_toStartOf="@+id/tv_message_hold" android:layout_marginEnd="19dp"
            android:textColor="@color/colorBlack" android:fontFamily="@font/tcceb"/>
    <TextView
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:id="@+id/tv_message_hold"
            android:text="@string/str_click_hold" android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_message_vib_layout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="19dp" android:textColor="@color/colorBlack"
            android:fontFamily="@font/tcceb"/>
    <ImageView
            android:layout_width="115dp"
            android:layout_height="50dp" app:srcCompat="@drawable/img_message_message"
            android:id="@+id/iv_message_message" android:layout_marginTop="73dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_message_vib_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="19dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/rg_message_message"
            android:orientation="horizontal" app:layout_constraintStart_toEndOf="@+id/iv_message_message"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="19dp" android:layout_marginEnd="19dp" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_message_click_once">

        <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/rb_click_once"
                android:button="@null" android:background="@drawable/selector_radiobutton_message_default"/>
        <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/rb_click_twice"
                app:layout_constraintTop_toBottomOf="@+id/tv_call_click_twice"
                app:layout_constraintEnd_toStartOf="@+id/rb_click_hold" android:layout_marginLeft="19dp"
                android:button="@null" android:background="@drawable/selector_radiobutton_message_default"/>
        <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/rb_click_hold"
                android:layout_marginLeft="19dp" android:background="@drawable/selector_radiobutton_message_default"
                android:button="@null"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>